# ohlc-timeserie-db.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
db/TEST/: TEST.im
db/TEST/TEST/: 1  2  3  4  5  6
src/: lib.rs  main.rs
src/bloc/: bloc.rs  mod.rs
src/channel/: channel.rs  mod.rs
src/channels/: mod.rs
src/channels/binarychannel/: binarychannel.rs  mod.rs
src/channels/inoutputs/: inoutputs.rs  mod.rs
src/collection/: append_points.rs  collection.rs  mod.rs
src/compression/: mod.rs
src/compression/encodemap/: compressor.rs  formatter.rs  mod.rs
src/datastruct/: mod.rs
src/datastruct/bloc/: bloc.rs
src/datastruct/collection/: append_points.rs  collection.rs  mod.rs
src/datastruct/indexmap/: indexmap.rs  mod.rs  read.rs  write.rs
src/datastruct/source/: mod.rs  source.rs
src/datastruct/tspoint/: tspoint.rs
src/encodemap/: compressor.rs  encodemap.rs  formatter.rs  mod.rs
src/filemanager/: filemanager.rs  mod.rs
src/helpers/: helpers.rs
src/indexing/: mod.rs
src/indexmap/: indexmap.rs  mod.rs  read.rs  write.rs
src/indexresult/: aggregator.rs  indexresult.rs  mod.rs  tsindexconverter.rs
src/inoutputs/: inoutputs.rs
src/schemaurl/: mod.rs  schemaurl.rs
src/source/: mod.rs  source.rs
src/system/: inject.rs  mod.rs  query.rs  queryparser.rs  scancontent.rs  system.rs
src/sysutils/: mod.rs
src/tsindexconverter/: mod.rs  tsindexconverter.rs
src/tspoint/: mod.rs  tspoint.rs
tests/: aggregation_test.rs  ohlc_aggregation_test.rs  query_string_test.rs  write_read_test.rs
(+7 files in other folders)
