
[package]
name = "timeseries_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.138" , features = ["derive"] }
bincode = "1.3.3"
rust_decimal = "1.25"

[lib]
doctest = false